# caveripper

./: .gitignore  .gitmodules  BROKEN_LAYOUTS.txt  Cargo.toml  QUERY.md  README.md  bootstrap.js  clean_assets.sh  extract_bti.py  extract_iso.sh  index.html  index_js.bootstrap.js  install.bat  install.sh  rustfmt.toml
assets/gamedata/: treasures_exploration_kit.txt
benches/: benchmark_cavegen.rs
bindings/: Cargo.toml
bindings/src/: python_bindings.rs
caveripper/: Cargo.toml
caveripper/benches/: benchmark_cavegen.rs
caveripper/src/: assets.rs  caveinfo.rs  errors.rs  layout.rs  lib.rs  pinmap.rs  point.rs  python_bindings.rs  query.rs  render.rs  search.rs  sublevel.rs
caveripper/src/assets/: assets.rs  fs_asset_manager.rs  mod.rs  pinmap.rs
caveripper/src/caveinfo/: caveinfo.rs  error.rs  mod.rs  p2_cfg_grammar.pest  parse.rs  util.rs
caveripper/src/caveinfo/parse/: p2_cfg_grammar.pest  section.rs
caveripper/src/layout/: generate.rs  layout.rs  mod.rs  render.rs  test.rs  waypoint.rs
caveripper/src/pikmin_math/: math.rs  rng.rs  test.rs
caveripper/src/query/: query.rs  query_grammar.pest  search.rs  test.rs
caveripper/src/query/special/: consecutive_identical_seeds.rs  mod.rs
caveripper/src/render/: canvas.rs  coords.rs  mod.rs  pixel_ext.rs  render.rs  render_caveinfo.rs  render_layout.rs  renderer.rs  shapes.rs  test.rs  text.rs  util.rs
caveripper/src/render/sticker/: canvas.rs  mod.rs  shapes.rs
cli/: Cargo.toml
cli/src/: bti.rs  cli.rs  extract.rs  main.rs  rarc.rs
cli/src/extract/: bti.rs  rarc.rs  util.rs
dweevil/: Cargo.toml  README.md  package-lock.json
dweevil/src/: lib.rs  network_asset_manager.rs
dweevil/src/assets/: data.rs  mod.rs  web_asset_manager.rs
dweevil/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
gamedata/: treasures.txt
reference/: Rng.java  Sqrt.java  randFloat_100k.txt  randIndexWeight_10k.txt  randInt_65k.txt  sqrt_5k_point3.txt
resources/: caveinfo_config.txt
resources/colossal_caverns/caveinfo/: colossal.txt
resources/colossal_caverns/unitfiles/: all_units.txt
src/: assets.rs  caveinfo.rs  cli.rs  errors.rs  layout.rs  lib.rs  main.rs  pikmin_math.rs  search.rs  seed.rs  sublevel.rs
src/caveinfo/: caveinfo_lazy_init.rs  caveinfoerror.rs  gamedata.rs  mod.rs  parse.rs  test.rs
src/layout/: generate.rs  mod.rs  render.rs  test.rs
src/pikmin_math/: math.rs  rng.rs  test.rs
tools/: wit
