[package]
name = "caveripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0"
encoding_rs = "0.8.28"
itertools = "0.10.1"
regex = "1.5.5"
once_cell = "1.8.0"
image = "0.24"
log = "0.4"
paste = "1.0"
structopt = "0.3"
maplit = "1.0"

[dependencies.simple_logger]
version = "1.13"
default-features = false
features = ["colors"]

[dependencies.rust-embed]
version = "6.3"
features = ["interpolate-folder-path", "compression"]

[dev-dependencies]
criterion = "0.3"
rand = {version="0.8", features=["small_rng"]}

[lib]
name = "cavegen"
path = "src/lib.rs"

[[bin]]
name = "caveripper"
path = "src/main.rs"

[[bench]]
name = "benchmark_cavegen"
harness = false
