[package]
name = "caveripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0"
encoding_rs = "0.8.28"
itertools = "0.10.1"
regex = "1.5.5"
once_cell = "1.8.0"
image = "0.24"
log = "0.4"
clap = {version="3.2", features=["derive"]}
rayon = "1.5"
indicatif = {version="0.16", features=["rayon"]}
rand = "0.8"
dashmap = "5.3"
thiserror = "1.0"
fontdue = "0.7.2"

[dependencies.simple_logger]
version = "1.13"
default-features = false
features = ["colors"]

[dev-dependencies]
criterion = "0.3"
rand = {version="0.8", features=["small_rng"]}
lazy_static = "*"

[lib]
name = "cavegen"
path = "src/lib.rs"

[[bin]]
name = "caveripper"
path = "src/main.rs"

[[bench]]
name = "benchmark_cavegen"
harness = false
