[package]
name = "caveripper"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
encoding_rs = "0.8.28"
itertools = "0.10.1"
regex = "1.5.5"
once_cell = "1.8.0"
image = "0.24"
log = "0.4"
clap = {version="4.0", features=["derive"]}
thiserror = "1.0"
fontdue = "0.7.2"
crossbeam = "0.8.2"
rand = {version="0.8", features=["small_rng"]}
indicatif = "0.17"
rayon = "1.5"
serde = {version="1.0", features=["derive"]}
error-stack = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_cavegen"
harness = false
