[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = {version="4.0", default-features=false, features=["colors"]}
rayon = "1.6"
indicatif = {version="0.17", features=["rayon"]}
clap = {version="4.0", features=["derive"]}
rand = "0.8"
log = "0.4"
atty = "0.2"
yaz0 = "0.3"
gc-gcm = "0.10"
encoding_rs = "0.8"
image = "0.24"
anyhow = "1.0"
regex = "1.7"
error-stack = "0.3"
dirs = "5.0"
caveripper = {path="../caveripper"}

[[bin]]
name = "caveripper"
path = "src/main.rs"
