[package]
name = "dweevil"
version = "0.1.0"
authors = ["mayabyte <mayahayden@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
caveripper = {path="../caveripper", features=[]}
error-stack = "0.4"
image = "0.24"
getrandom = {version="*", features=["js"]}  # Should fall back to whatever version is specified in Caveripper's cargo.toml

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
